# research-agent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.stage3  README.md  ROADMAP.md  pyproject.toml
stage_0/: 01_chat.py  02_structured.py  02_structured_anthropic.py  03_streaming.py  04_structured_anthropic.py  04_tool_use.py  05_agent_loop.py
stage_1/: README.md  build_manifest.py  chunk.py  embed_and_index.py  extract.py  generate_candidates.py  hybrid.py  rerank.py  retrieve.py  score.py  score_hybrid.py  score_rerank.py
stage_1/data/: chunks.json  extracted.json  manifest.json
stage_1/eval/: eval.json  eval_candidates.json  eval_judged.jsonl  eval_methodology.md
stage_1/results/: EXPERIMENTS.md  baseline_vector.json  hybrid_bm25_rrf.json  rerank_cohere.json
stage_2/: DEPLOYMENT.md  README.md  agent.py  api.py  judge.py  run_eval.py  spotcheck.py
stage_2/eval/: agent_answers.json  eval_methodology.md  eval_set.json  judge.json  rubric.md
stage_2/results/: EXPERIMENTS.md
stage_2/results/agent_runs/: run_20260527_200856.json  run_20260528_184136.json  run_20260528_195322.json  run_20260528_201638.json  run_20260529_115028_structure.json  (+5 more)
stage_2/static/: index.html
stage_3/: ARCHITECTURE.md  LOG.md  api.py  auth.py  episodic.py  feedback.py  graph.py  memory.py  vectorstore.py
stage_3/eval/: baseline.json  eval_episodic.py  eval_groundedness.py  eval_grounding_synthesis.py  eval_planner.py  eval_relevance.py  eval_router.py  run_all.py  test_keep_best.py
stage_3/results/: EXPERIMENTS.md
stage_3/static/: index.html
