[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.104.0",
    "arxiv>=1.4.8",
    "chromadb>=1.5.9",
    "cohere>=7.0.0",
    "fastapi>=0.136.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.8.5",
    "openai>=2.37.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "slowapi>=0.1.9",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
